[gd_scene load_steps=3 format=3 uid="uid://cjsd8jqp4iyqs"]

[ext_resource type="Script" uid="uid://d3wakf4nkuqrm" path="res://scenes/game/workshop.gd" id="1_nryu2"]
[ext_resource type="Script" uid="uid://d5ja3ucwhd3t" path="res://scenes/game/workshop_zones.gd" id="3_xg03h"]

[node name="Workshop" type="Node2D"]
script = ExtResource("1_nryu2")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 100.0
offset_bottom = 100.0
color = Color(0.5695807, 0.22148114, 0.30284122, 0.5647059)

[node name="WorkshopZones" type="Node2D" parent="."]
script = ExtResource("3_xg03h")

[node name="gotoMarket" type="RayCast2D" parent="WorkshopZones"]
target_position = Vector2(0, 1500)

[node name="cardOptions" type="Node2D" parent="WorkshopZones"]

[node name="cardXs" type="Node2D" parent="WorkshopZones/cardOptions"]

[node name="Price" type="Label" parent="WorkshopZones/cardOptions/cardXs"]
offset_right = 40.0
offset_bottom = 23.0

[node name="SelectXs" type="Button" parent="WorkshopZones/cardOptions/cardXs"]
offset_top = -64.0
offset_right = 64.0

[node name="cardS" type="Node2D" parent="WorkshopZones/cardOptions"]
position = Vector2(256, 0)

[node name="Price" type="Label" parent="WorkshopZones/cardOptions/cardS"]
offset_right = 40.0
offset_bottom = 23.0

[node name="SelectS" type="Button" parent="WorkshopZones/cardOptions/cardS"]
offset_top = -64.0
offset_right = 64.0

[node name="cardM" type="Node2D" parent="WorkshopZones/cardOptions"]
position = Vector2(512, 0)

[node name="Price" type="Label" parent="WorkshopZones/cardOptions/cardM"]
offset_right = 40.0
offset_bottom = 23.0

[node name="SelectM" type="Button" parent="WorkshopZones/cardOptions/cardM"]
offset_top = -64.0
offset_right = 64.0

[node name="cardL" type="Node2D" parent="WorkshopZones/cardOptions"]
position = Vector2(768, 0)

[node name="Price" type="Label" parent="WorkshopZones/cardOptions/cardL"]
offset_right = 40.0
offset_bottom = 23.0

[node name="SelectL" type="Button" parent="WorkshopZones/cardOptions/cardL"]
offset_top = -64.0
offset_right = 64.0

[node name="cardXl" type="Node2D" parent="WorkshopZones/cardOptions"]
position = Vector2(1024, 0)

[node name="Price" type="Label" parent="WorkshopZones/cardOptions/cardXl"]
offset_right = 40.0
offset_bottom = 23.0

[node name="SelectXl" type="Button" parent="WorkshopZones/cardOptions/cardXl"]
offset_top = -64.0
offset_right = 64.0

[node name="cardMinigames" type="Node2D" parent="WorkshopZones"]

[node name="Game1" type="Node2D" parent="WorkshopZones/cardMinigames"]
position = Vector2(5120, 2560)

[node name="DisplayBar" type="ColorRect" parent="WorkshopZones/cardMinigames/Game1"]
offset_right = 720.0
offset_bottom = 32.0
color = Color(0.95686275, 0.90588236, 0.8862745, 0.7529412)

[node name="Hitbar" type="ColorRect" parent="WorkshopZones/cardMinigames/Game1"]
offset_left = 312.0
offset_right = 408.0
offset_bottom = 32.0
color = Color(0.9999996, 0.15753025, 0.16280267, 1)

[node name="Slider" type="ColorRect" parent="WorkshopZones/cardMinigames/Game1"]
offset_right = 16.0
offset_bottom = 32.0
color = Color(0.30588236, 0.72156864, 0, 1)

[connection signal="pressed" from="WorkshopZones/cardOptions/cardXs/SelectXs" to="WorkshopZones" method="_on_selectXs_pressed"]
[connection signal="pressed" from="WorkshopZones/cardOptions/cardS/SelectS" to="WorkshopZones" method="_on_select_s_pressed"]
[connection signal="pressed" from="WorkshopZones/cardOptions/cardM/SelectM" to="WorkshopZones" method="_on_select_m_pressed"]
[connection signal="pressed" from="WorkshopZones/cardOptions/cardL/SelectL" to="WorkshopZones" method="_on_select_l_pressed"]
[connection signal="pressed" from="WorkshopZones/cardOptions/cardXl/SelectXl" to="WorkshopZones" method="_on_select_xl_pressed"]
